Update generated content

--- a/home_quizzes.html
+++ b/home_quizzes.html
@@ -471,6 +471,33 @@
     */
     const newsData = [
   {
+    "title": "Guardiola về Tây Ban Nha cứu vãn hôn nhân",
+    "content": "HLV Pep Guardiola của Man City đã bí mật trở về Tây Ban Nha vào đầu tháng 3 để cố gắng cứu vãn hôn nhân với vợ, Cristina. Họ đã ở cùng nhau ba đêm tại Barcelona sau khi Guardiola tham dự trận đấu và trở về Manchester. Mối quan hệ của họ gặp trục trặc do Guardiola quá đam mê công việc và sự khác biệt về cuộc sống tại Manchester. Cặp đôi đã quen nhau từ năm 1989 và có ba con trước khi kết hôn vào năm 2014.",
+    "link": "https://vnexpress.net/guardiola-ve-tay-ban-nha-cuu-van-hon-nhan-4859466.html",
+    "cat": "gia-dinh",
+    "positivity": 6,
+    "importance": 7,
+    "question": "Tại sao Guardiola trở về Tây Ban Nha vào tháng 3?",
+    "answers": [
+      {
+        "text": "Để cứu vãn hôn nhân với vợ Cristina.",
+        "correct": true
+      },
+      {
+        "text": "Để tham dự một sự kiện thể thao.",
+        "correct": false
+      },
+      {
+        "text": "Để gặp gỡ bạn bè cũ.",
+        "correct": false
+      },
+      {
+        "text": "Để tìm hiểu về ẩm thực Tây Ban Nha.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Alcaraz thắng trận thứ 14 liên tiếp ở Indian Wells",
     "content": "Carlos Alcaraz đã giành chiến thắng thứ 14 liên tiếp tại Indian Wells sau khi đánh bại Denis Shapovalov với tỷ số 6-2, 6-4. Trận đấu diễn ra nhanh chóng chỉ trong 82 phút, và Alcaraz tiếp tục duy trì thành tích chưa thua set nào ở giải đấu năm nay. Tay vợt 21 tuổi này hướng tới danh hiệu BNP Paribas Open thứ ba liên tiếp và đang có cơ hội lớn khi nhiều đối thủ mạnh đã bị loại.",
     "link": "https://vnexpress.net/alcaraz-thang-tran-thu-14-lien-tiep-o-indian-wells-4859592.html",
@@ -551,6 +578,37 @@
       },
       {
         "text": "Chỉ phục vụ cho một số đối tượng nhất định.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "5 ôtô hybrid bán nhiều nhất Việt Nam tháng 2",
+    "content": "Tháng 2/2025, Toyota Innova Cross Hybrid là mẫu xe hybrid bán chạy nhất tại Việt Nam với 192 xe được bàn giao. Theo sau là Suzuki XL7 Hybrid với 166 xe và Toyota Corolla Cross với 143 xe. Honda CR-V và Toyota Camry lần lượt đứng ở vị trí thứ tư và thứ năm trong danh sách này.",
+    "link": "https://vnexpress.net/oto-xe-may/v-car/doanh-so/5-oto-hybrid-ban-nhieu-nhat-viet-nam-thang-2-4859456.html",
+    "cat": "oto-xe-may",
+    "positivity": 8,
+    "importance": 7,
+    "question": "5 ôtô hybrid bán chạy nhất tại Việt Nam tháng 2/2025 là gì?",
+    "answers": [
+      {
+        "text": "Toyota Innova Cross Hybrid",
+        "correct": true
+      },
+      {
+        "text": "Suzuki XL7 Hybrid",
+        "correct": false
+      },
+      {
+        "text": "Honda CR-V",
+        "correct": false
+      },
+      {
+        "text": "Toyota Corolla Cross",
+        "correct": false
+      },
+      {
+        "text": "Toyota Camry",
         "correct": false
       }
     ]
@@ -1731,37 +1789,6 @@
     ]
   },
   {
-    "title": "Người trẻ chọn sếp",
-    "content": "Bài viết đề cập đến xu hướng ngày càng tăng trong giới trẻ khi chọn lựa sếp làm yếu tố quyết định khi tìm việc. Hà My và Thế Thành, hai nhân viên trẻ, đã chia sẻ trải nghiệm của họ về tầm quan trọng của người quản lý trong môi trường làm việc, cho thấy rằng sếp có khả năng lãnh đạo tốt và đồng cảm sẽ thu hút nhân tài. Các nghiên cứu chỉ ra rằng nhân viên trẻ ngày nay ưu tiên chọn sếp phù hợp hơn là chỉ đơn thuần tìm kiếm công ty có chế độ đãi ngộ tốt.",
-    "link": "https://vnexpress.net/nguoi-tre-chon-sep-4857254.html",
-    "cat": "kinh-doanh",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Tại sao người trẻ lại chọn sếp khi tìm việc?",
-    "answers": [
-      {
-        "text": "Vì họ muốn làm việc với người có khả năng lãnh đạo tốt và phù hợp với phong cách làm việc của mình.",
-        "correct": true
-      },
-      {
-        "text": "Bởi vì họ thích làm việc trong môi trường có nhiều cơ hội thăng tiến.",
-        "correct": false
-      },
-      {
-        "text": "Vì họ ưu tiên lương thưởng cao hơn mọi yếu tố khác.",
-        "correct": false
-      },
-      {
-        "text": "Bởi vì họ không muốn làm việc dưới sự quản lý nghiêm khắc.",
-        "correct": false
-      },
-      {
-        "text": "Vì họ muốn có thời gian làm việc thoải mái.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Xe con phóng nhanh gặp xe tải bất ngờ mở cửa",
     "content": "Vào ngày 10/3 tại đường tỉnh 78, Ba Vì, một vụ việc giao thông đã xảy ra khi một xe con đang phóng nhanh với tốc độ hơn 60 km/h gặp phải xe tải đang đỗ lề đường bất ngờ mở cửa. Mặc dù tài xế xe con gắn camera hành trình không giảm tốc độ, may mắn là không có tai nạn xảy ra. Các chuyên gia nhấn mạnh tầm quan trọng của việc giảm tốc độ khi gặp xe lớn đỗ, đồng thời cảnh báo tài xế xe tải cần quan sát kỹ trước khi mở cửa xe để tránh sự cố. Theo luật mới, hành vi mở cửa không an toàn có thể bị phạt đến 22 triệu đồng nếu dẫn đến tai nạn.",
     "link": "https://vnexpress.net/xe-con-phong-nhanh-gap-xe-tai-bat-ngo-mo-cua-4859155.html",
@@ -1815,6 +1842,37 @@
       },
       {
         "text": "Không cần lo lắng về sự phát triển của AI",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Người trẻ chọn sếp",
+    "content": "Bài viết đề cập đến xu hướng ngày càng tăng trong giới trẻ khi chọn lựa sếp làm yếu tố quyết định khi tìm việc. Hà My và Thế Thành, hai nhân viên trẻ, đã chia sẻ trải nghiệm của họ về tầm quan trọng của người quản lý trong môi trường làm việc, cho thấy rằng sếp có khả năng lãnh đạo tốt và đồng cảm sẽ thu hút nhân tài. Các nghiên cứu chỉ ra rằng nhân viên trẻ ngày nay ưu tiên chọn sếp phù hợp hơn là chỉ đơn thuần tìm kiếm công ty có chế độ đãi ngộ tốt.",
+    "link": "https://vnexpress.net/nguoi-tre-chon-sep-4857254.html",
+    "cat": "kinh-doanh",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Tại sao người trẻ lại chọn sếp khi tìm việc?",
+    "answers": [
+      {
+        "text": "Vì họ muốn làm việc với người có khả năng lãnh đạo tốt và phù hợp với phong cách làm việc của mình.",
+        "correct": true
+      },
+      {
+        "text": "Bởi vì họ thích làm việc trong môi trường có nhiều cơ hội thăng tiến.",
+        "correct": false
+      },
+      {
+        "text": "Vì họ ưu tiên lương thưởng cao hơn mọi yếu tố khác.",
+        "correct": false
+      },
+      {
+        "text": "Bởi vì họ không muốn làm việc dưới sự quản lý nghiêm khắc.",
+        "correct": false
+      },
+      {
+        "text": "Vì họ muốn có thời gian làm việc thoải mái.",
         "correct": false
       }
     ]
@@ -1874,33 +1932,6 @@
     ]
   },
   {
-    "title": "Cách phân biệt giữa 'va chạm giao thông' và 'tai nạn giao thông'",
-    "content": "Bài viết phân tích sự khác biệt giữa 'va chạm giao thông' và 'tai nạn giao thông' dựa trên mức độ gây thiệt hại về người và tài sản. Va chạm giao thông được định nghĩa là những sự cố có thiệt hại dưới mức quy định của tai nạn giao thông, như gây thương tích cho một người với tỷ lệ thương tật dưới 11% hoặc thiệt hại tài sản dưới 10 triệu đồng. Ngược lại, tai nạn giao thông có mức độ thiệt hại nghiêm trọng hơn, dẫn đến việc xử lý pháp lý khác nhau, trong đó tai nạn có thể bị truy cứu trách nhiệm hình sự.",
-    "link": "https://vnexpress.net/cach-phan-biet-giua-va-cham-giao-thong-va-tai-nan-giao-thong-4859145.html",
-    "cat": "phap-luat",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Va chạm giao thông khác tai nạn giao thông như thế nào?",
-    "answers": [
-      {
-        "text": "Va chạm giao thông có thiệt hại nhẹ hơn tai nạn giao thông.",
-        "correct": true
-      },
-      {
-        "text": "Va chạm giao thông luôn gây thiệt hại nặng nề.",
-        "correct": false
-      },
-      {
-        "text": "Tai nạn giao thông xảy ra chỉ với một xe.",
-        "correct": false
-      },
-      {
-        "text": "Va chạm giao thông không bao giờ bị phạt.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Bác sĩ vẽ bản đồ tim cứu sản phụ thoát cửa tử",
     "content": "Một sản phụ 36 tuổi đã thoát khỏi nguy cơ tử vong trong ca mổ sinh nhờ vào sự can thiệp kịp thời của bác sĩ. Trong quá trình mang thai, chị gặp phải tình trạng nhịp tim nhanh lên đến 190 lần/phút và không đáp ứng với thuốc điều trị. Các bác sĩ đã sử dụng kỹ thuật lập bản đồ tim 3D để xác định nguyên nhân và thực hiện đốt điện giúp nhịp tim trở lại bình thường, đảm bảo sự an toàn cho cả mẹ và bé.",
     "link": "https://vnexpress.net/bac-si-ve-ban-do-tim-cuu-san-phu-thoat-cua-tu-4858948.html",
@@ -1927,6 +1958,33 @@
       },
       {
         "text": "Không thực hiện mổ mà chỉ theo dõi tình trạng",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Cách phân biệt giữa 'va chạm giao thông' và 'tai nạn giao thông'",
+    "content": "Bài viết phân tích sự khác biệt giữa 'va chạm giao thông' và 'tai nạn giao thông' dựa trên mức độ gây thiệt hại về người và tài sản. Va chạm giao thông được định nghĩa là những sự cố có thiệt hại dưới mức quy định của tai nạn giao thông, như gây thương tích cho một người với tỷ lệ thương tật dưới 11% hoặc thiệt hại tài sản dưới 10 triệu đồng. Ngược lại, tai nạn giao thông có mức độ thiệt hại nghiêm trọng hơn, dẫn đến việc xử lý pháp lý khác nhau, trong đó tai nạn có thể bị truy cứu trách nhiệm hình sự.",
+    "link": "https://vnexpress.net/cach-phan-biet-giua-va-cham-giao-thong-va-tai-nan-giao-thong-4859145.html",
+    "cat": "phap-luat",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Va chạm giao thông khác tai nạn giao thông như thế nào?",
+    "answers": [
+      {
+        "text": "Va chạm giao thông có thiệt hại nhẹ hơn tai nạn giao thông.",
+        "correct": true
+      },
+      {
+        "text": "Va chạm giao thông luôn gây thiệt hại nặng nề.",
+        "correct": false
+      },
+      {
+        "text": "Tai nạn giao thông xảy ra chỉ với một xe.",
+        "correct": false
+      },
+      {
+        "text": "Va chạm giao thông không bao giờ bị phạt.",
         "correct": false
       }
     ]
@@ -2419,6 +2477,33 @@
     ]
   },
   {
+    "title": "Triệu hồi sản phẩm thể hiện trách nhiệm của hãng xe",
+    "content": "Triệu hồi sản phẩm là một hành động quan trọng trong ngành ôtô, thể hiện trách nhiệm của các hãng xe đối với khách hàng khi phát hiện rủi ro về sản phẩm. Mới đây, Yamaha Motor Việt Nam đã triệu hồi gần 160.000 xe sản xuất từ tháng 10/2021 đến tháng 11/2024 để kiểm tra bề mặt số động cơ có dấu hiệu bị sửa chữa. Hãng xe này cam kết sẽ đảm bảo an toàn cho người dùng và thực hiện kiểm tra miễn phí cho khách hàng.",
+    "link": "https://vnexpress.net/trieu-hoi-san-pham-the-hien-trach-nhiem-cua-hang-xe-4859319.html",
+    "cat": "oto-xe-may",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Tại sao Yamaha Motor Việt Nam triệu hồi gần 160.000 xe?",
+    "answers": [
+      {
+        "text": "Để kiểm tra bề mặt số động cơ có dấu hiệu bị sửa chữa.",
+        "correct": true
+      },
+      {
+        "text": "Để tăng doanh số bán hàng.",
+        "correct": false
+      },
+      {
+        "text": "Để giới thiệu mẫu xe mới.",
+        "correct": false
+      },
+      {
+        "text": "Để thay đổi thiết kế xe.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "6 nhóm thực phẩm người hen phế quản nên tránh",
     "content": "Bài viết liệt kê 6 nhóm thực phẩm mà người mắc bệnh hen phế quản nên tránh để phòng ngừa các cơn hen tái phát. Các loại thực phẩm này bao gồm thực phẩm giàu calo, thực phẩm có gas, thực phẩm chứa chất bảo quản, thực phẩm gây dị ứng, thực phẩm mặn và các chất béo không lành mạnh. Những thực phẩm này có thể làm trầm trọng thêm tình trạng bệnh và gây khó khăn trong việc hô hấp. Người bệnh nên chú ý đến chế độ ăn uống để kiểm soát triệu chứng hiệu quả hơn.",
     "link": "https://vnexpress.net/6-nhom-thuc-pham-nguoi-hen-phe-quan-nen-tranh-4859245.html",
@@ -2445,33 +2530,6 @@
       },
       {
         "text": "Thực phẩm chiên và đồ ăn nhanh",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Triệu hồi sản phẩm thể hiện trách nhiệm của hãng xe",
-    "content": "Triệu hồi sản phẩm là một hành động quan trọng trong ngành ôtô, thể hiện trách nhiệm của các hãng xe đối với khách hàng khi phát hiện rủi ro về sản phẩm. Mới đây, Yamaha Motor Việt Nam đã triệu hồi gần 160.000 xe sản xuất từ tháng 10/2021 đến tháng 11/2024 để kiểm tra bề mặt số động cơ có dấu hiệu bị sửa chữa. Hãng xe này cam kết sẽ đảm bảo an toàn cho người dùng và thực hiện kiểm tra miễn phí cho khách hàng.",
-    "link": "https://vnexpress.net/trieu-hoi-san-pham-the-hien-trach-nhiem-cua-hang-xe-4859319.html",
-    "cat": "oto-xe-may",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Tại sao Yamaha Motor Việt Nam triệu hồi gần 160.000 xe?",
-    "answers": [
-      {
-        "text": "Để kiểm tra bề mặt số động cơ có dấu hiệu bị sửa chữa.",
-        "correct": true
-      },
-      {
-        "text": "Để tăng doanh số bán hàng.",
-        "correct": false
-      },
-      {
-        "text": "Để giới thiệu mẫu xe mới.",
-        "correct": false
-      },
-      {
-        "text": "Để thay đổi thiết kế xe.",
         "correct": false
       }
     ]
@@ -3079,33 +3137,6 @@
       },
       {
         "text": "Đại học Sư phạm Hà Nội",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "10 ôtô bán ít nhất thị trường Việt Nam tháng 2",
-    "content": "Báo cáo doanh số ô tô tháng 2/2025 cho thấy Toyota Land Cruiser và Honda Accord là hai mẫu xe bán ít nhất tại thị trường Việt Nam, với chỉ 2 xe được bàn giao cho mỗi mẫu. Sự sụt giảm doanh số so với tháng trước rất rõ ràng, khi Land Cruiser đã bán 17 xe trong tháng 1 và Accord bán 5 xe. Ngoài hai mẫu xe này, Kia K5, Mitsubishi Pajero Sport, và Isuzu mu-X cũng nằm trong danh sách những xe có doanh số thấp trong tháng 2.",
-    "link": "https://vnexpress.net/oto-xe-may/v-car/doanh-so/10-oto-ban-it-nhat-thi-truong-viet-nam-thang-2-4858749.html",
-    "cat": "oto-xe-may",
-    "positivity": 3,
-    "importance": 6,
-    "question": "Những ô tô nào bán ít nhất tại thị trường Việt Nam tháng 2/2025?",
-    "answers": [
-      {
-        "text": "Toyota Land Cruiser và Honda Accord",
-        "correct": true
-      },
-      {
-        "text": "Kia K5 và Mitsubishi Pajero Sport",
-        "correct": false
-      },
-      {
-        "text": "Isuzu mu-X và Toyota Corolla Altis",
-        "correct": false
-      },
-      {
-        "text": "Mazda6 và Suzuki Jimny",
         "correct": false
       }
     ]
@@ -4977,33 +5008,6 @@
       },
       {
         "text": "Nhật Bản, khoảng 80 triệu đồng",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Mở chiến dịch truyền thông chống buôn bán ngà voi với du khách",
-    "content": "Cơ quan thẩm quyền quản lý CITES tại Việt Nam đã khởi động chiến dịch truyền thông nhằm nâng cao nhận thức về việc chống buôn bán ngà voi. Chiến dịch này nhấn mạnh tính phi pháp của việc mua bán sản phẩm từ ngà voi và cảnh báo khách du lịch về hậu quả của việc tham gia vào hoạt động này. Các thông điệp sẽ được phát qua màn hình ngoài trời tại sân bay và các điểm du lịch lớn, cũng như trên mạng xã hội. Mục tiêu là bảo vệ loài voi, vốn đang đối mặt với nguy cơ tuyệt chủng vì nạn buôn bán ngà voi.",
-    "link": "https://tuoitre.vn/mo-chien-dich-truyen-thong-chong-buon-ban-nga-voi-voi-du-khach-20250310110236141.htm",
-    "cat": "du-lich",
-    "positivity": 8,
-    "importance": 9,
-    "question": "Chiến dịch truyền thông chống buôn bán ngà voi tại Việt Nam nhằm mục đích gì?",
-    "answers": [
-      {
-        "text": "Nâng cao nhận thức về tác hại của việc buôn bán ngà voi",
-        "correct": true
-      },
-      {
-        "text": "Khuyến khích du khách mua ngà voi",
-        "correct": false
-      },
-      {
-        "text": "Tăng cường buôn bán động vật hoang dã",
-        "correct": false
-      },
-      {
-        "text": "Giảm số lượng du khách đến Việt Nam",
         "correct": false
       }
     ]
