Update generated content

--- a/home.html
+++ b/home.html
@@ -148,6 +148,37 @@
     // Replace this with your actual news data.
     const newsData = [
   {
+    "title": "Bé trai bị biến chứng lồng ruột",
+    "content": "Bé Minh, 8 tháng tuổi, đã nhập viện trong tình trạng nghiêm trọng do biến chứng lồng ruột, với triệu chứng nôn, tiêu nhầy máu và mất nước nặng. Đây là trường hợp lồng ruột biến chứng nặng đầu tiên tại Bệnh viện Đa khoa Tâm Anh TP HCM. Sau khi được cấp cứu khẩn cấp, bác sĩ đã áp dụng phương pháp bơm hơi để tháo lồng ruột cho bé, và sau hai ngày điều trị, bé đã hồi phục và được xuất viện.",
+    "link": "https://vnexpress.net/be-trai-bi-bien-chung-long-ruot-4859550.html",
+    "cat": "suc-khoe",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Bé Minh đã gặp phải tình trạng gì khi nhập viện?",
+    "answers": [
+      {
+        "text": "Lồng ruột",
+        "correct": true
+      },
+      {
+        "text": "Viêm phổi",
+        "correct": false
+      },
+      {
+        "text": "Sốt xuất huyết",
+        "correct": false
+      },
+      {
+        "text": "Tiêu chảy cấp",
+        "correct": false
+      },
+      {
+        "text": "Bệnh tim bẩm sinh",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Ngành bảo hiểm xã hội tinh gọn còn một nửa đầu mối",
     "content": "Ngành bảo hiểm xã hội Việt Nam vừa thực hiện sắp xếp lại bộ máy, giảm số đầu mối từ 1.470 xuống còn 747, tương đương giảm hơn 49%. Sau khi tái cấu trúc, hệ thống bảo hiểm xã hội được tổ chức thành ba cấp: cấp trung ương, cấp khu vực và cấp huyện, với nhiều đơn vị hoạt động từ đầu tháng 4/2025. Giám đốc Bảo hiểm xã hội Việt Nam yêu cầu các cấp khắc phục khó khăn trong quá trình chuyển đổi để không ảnh hưởng đến người dân.",
     "link": "https://vnexpress.net/nganh-bao-hiem-xa-hoi-tinh-gon-con-mot-nua-dau-moi-4859589.html",
@@ -2224,6 +2255,33 @@
     ]
   },
   {
+    "title": "Con trai Courtois nguy cơ vô gia cư",
+    "content": "Elsa Izac, tình cũ của thủ môn Thibaut Courtois, đang đối mặt với nguy cơ bị tịch thu nhà do khoản nợ 63.000 bảng tiền thế chấp. Cô và con trai 7 tuổi, Enzo, sống trong một ngôi nhà trị giá 3 triệu bảng tại Wimbledon, London, nhưng hiện tại đang gặp khó khăn tài chính. Elsa cho rằng Courtois không hỗ trợ đủ cho mẹ con cô, mặc dù thủ môn này có thu nhập hàng triệu USD từ câu lạc bộ Real Madrid.",
+    "link": "https://vnexpress.net/con-trai-courtois-nguy-co-vo-gia-cu-4859328.html",
+    "cat": "the-thao",
+    "positivity": 3,
+    "importance": 7,
+    "question": "Tại sao con trai Courtois và Elsa Izac lại gặp nguy cơ vô gia cư?",
+    "answers": [
+      {
+        "text": "Họ có khoản nợ 63.000 bảng tiền thế chấp.",
+        "correct": true
+      },
+      {
+        "text": "Họ không có đủ tiền chi tiêu hàng ngày.",
+        "correct": false
+      },
+      {
+        "text": "Ngôi nhà của họ bị hư hỏng nặng.",
+        "correct": false
+      },
+      {
+        "text": "Courtois không muốn chu cấp cho họ.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Đời buồn của cậu bé ước được đến trường",
     "content": "Bình An, 9 tuổi, mơ ước được đến trường nhưng đang phải đối mặt với căn bệnh ung thư máu. Gia đình cậu sống trong hoàn cảnh khó khăn, với thu nhập thấp và không đủ khả năng chi trả cho việc điều trị. Dù gặp nhiều khó khăn, mẹ cậu, chị Cẩm Tuyết, vẫn không từ bỏ hy vọng và cùng con chiến đấu với bệnh tật. Chương trình Mặt trời Hy vọng được triển khai nhằm hỗ trợ những trẻ em có hoàn cảnh khó khăn như Bình An.",
     "link": "https://vnexpress.net/doi-buon-cua-cau-be-uoc-duoc-den-truong-4859070.html",
@@ -2251,28 +2309,28 @@
     ]
   },
   {
-    "title": "Con trai Courtois nguy cơ vô gia cư",
-    "content": "Elsa Izac, tình cũ của thủ môn Thibaut Courtois, đang đối mặt với nguy cơ bị tịch thu nhà do khoản nợ 63.000 bảng tiền thế chấp. Cô và con trai 7 tuổi, Enzo, sống trong một ngôi nhà trị giá 3 triệu bảng tại Wimbledon, London, nhưng hiện tại đang gặp khó khăn tài chính. Elsa cho rằng Courtois không hỗ trợ đủ cho mẹ con cô, mặc dù thủ môn này có thu nhập hàng triệu USD từ câu lạc bộ Real Madrid.",
-    "link": "https://vnexpress.net/con-trai-courtois-nguy-co-vo-gia-cu-4859328.html",
-    "cat": "the-thao",
-    "positivity": 3,
-    "importance": 7,
-    "question": "Tại sao con trai Courtois và Elsa Izac lại gặp nguy cơ vô gia cư?",
+    "title": "Toàn quốc dự kiến giảm còn 2.500 đơn vị hành chính cấp xã",
+    "content": "Phó thủ tướng Nguyễn Hòa Bình thông báo rằng số lượng đơn vị hành chính cấp xã trên toàn quốc sẽ giảm từ hơn 10.500 xuống còn 2.500 sau khi thực hiện sáp nhập. Việc sáp nhập này dự kiến sẽ hoàn thành vào tháng 6 năm 2025. Trung ương sẽ ban hành tiêu chí cho các địa phương để xây dựng phương án sắp xếp, đồng thời nâng cao chất lượng cán bộ cấp xã để tương đương với cán bộ cấp tỉnh.",
+    "link": "https://vnexpress.net/toan-quoc-du-kien-giam-con-2-500-don-vi-hanh-chinh-cap-xa-4859152.html",
+    "cat": "thoi-su",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Việt Nam dự kiến có bao nhiêu đơn vị hành chính cấp xã sau khi sáp nhập?",
     "answers": [
       {
-        "text": "Họ có khoản nợ 63.000 bảng tiền thế chấp.",
+        "text": "2.500",
         "correct": true
       },
       {
-        "text": "Họ không có đủ tiền chi tiêu hàng ngày.",
+        "text": "10.000",
         "correct": false
       },
       {
-        "text": "Ngôi nhà của họ bị hư hỏng nặng.",
+        "text": "8.500",
         "correct": false
       },
       {
-        "text": "Courtois không muốn chu cấp cho họ.",
+        "text": "5.000",
         "correct": false
       }
     ]
@@ -2304,33 +2362,6 @@
       },
       {
         "text": "3.500",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Toàn quốc dự kiến giảm còn 2.500 đơn vị hành chính cấp xã",
-    "content": "Phó thủ tướng Nguyễn Hòa Bình thông báo rằng số lượng đơn vị hành chính cấp xã trên toàn quốc sẽ giảm từ hơn 10.500 xuống còn 2.500 sau khi thực hiện sáp nhập. Việc sáp nhập này dự kiến sẽ hoàn thành vào tháng 6 năm 2025. Trung ương sẽ ban hành tiêu chí cho các địa phương để xây dựng phương án sắp xếp, đồng thời nâng cao chất lượng cán bộ cấp xã để tương đương với cán bộ cấp tỉnh.",
-    "link": "https://vnexpress.net/toan-quoc-du-kien-giam-con-2-500-don-vi-hanh-chinh-cap-xa-4859152.html",
-    "cat": "thoi-su",
-    "positivity": 8,
-    "importance": 9,
-    "question": "Việt Nam dự kiến có bao nhiêu đơn vị hành chính cấp xã sau khi sáp nhập?",
-    "answers": [
-      {
-        "text": "2.500",
-        "correct": true
-      },
-      {
-        "text": "10.000",
-        "correct": false
-      },
-      {
-        "text": "8.500",
-        "correct": false
-      },
-      {
-        "text": "5.000",
         "correct": false
       }
     ]
