Update generated content

--- a/home_shortnews.html
+++ b/home_shortnews.html
@@ -81,6 +81,64 @@
     // Example JSON array with news objects
     const newsData = [
   {
+    "title": "Lập báo cáo tiền khả thi đường sắt TP HCM - Cần Thơ dài 175 km",
+    "content": "Bộ trưởng Xây dựng Trần Hồng Minh thông báo về việc lập Báo cáo tiền khả thi cho dự án đường sắt TP HCM - Cần Thơ dài 175 km, nhằm kết nối đồng bộ với tuyến đường sắt tốc độ cao Bắc Nam. Dự án này sẽ bao gồm 12 ga và 4 trạm khách trong tương lai, với tổng mức đầu tư dự kiến khoảng 238.616 tỷ đồng. Tuyến đường sắt sẽ đi qua 6 tỉnh thành, bắt đầu từ ga An Bình và kết thúc tại ga Cần Thơ, dự kiến hoàn thành trước năm 2030.",
+    "link": "https://vnexpress.net/lap-bao-cao-tien-kha-thi-duong-sat-tp-hcm-can-tho-dai-175-km-4859546.html",
+    "cat": "thoi-su",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Dự án đường sắt TP HCM - Cần Thơ dài bao nhiêu km?",
+    "answers": [
+      {
+        "text": "175 km",
+        "correct": true
+      },
+      {
+        "text": "150 km",
+        "correct": false
+      },
+      {
+        "text": "200 km",
+        "correct": false
+      },
+      {
+        "text": "160 km",
+        "correct": false
+      },
+      {
+        "text": "180 km",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Tài xế độ đèn gây lóa mắt người đi đường",
+    "content": "Tình trạng tài xế lắp đèn độ gây lóa mắt người đi đường tại Hà Nội đang gia tăng, đặc biệt là trên các tuyến đường có nhiều xe tải và xe khách. Nhiều tài xế lắp thêm đèn trợ sáng với cường độ ánh sáng cao, khiến người đi đường gặp khó khăn trong việc quan sát. Cảnh sát giao thông đã tiến hành kiểm tra và xử phạt nhiều trường hợp vi phạm này, nhấn mạnh rằng việc lắp đèn không đúng quy định sẽ bị phạt nặng và yêu cầu tháo bỏ thiết bị không hợp lệ.",
+    "link": "https://vnexpress.net/tai-xe-do-den-gay-loa-mat-nguoi-di-duong-4857538.html",
+    "cat": "phap-luat",
+    "positivity": 3,
+    "importance": 8,
+    "question": "Tại sao tài xế lại lắp đèn độ trên xe của họ?",
+    "answers": [
+      {
+        "text": "Để quan sát đường sá dễ hơn.",
+        "correct": true
+      },
+      {
+        "text": "Để tiết kiệm nhiên liệu.",
+        "correct": false
+      },
+      {
+        "text": "Để tăng tốc độ xe.",
+        "correct": false
+      },
+      {
+        "text": "Để làm đẹp cho xe.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Bé trai bị biến chứng lồng ruột",
     "content": "Bé Minh, 8 tháng tuổi, đã nhập viện trong tình trạng nghiêm trọng do biến chứng lồng ruột, với triệu chứng nôn, tiêu nhầy máu và mất nước nặng. Đây là trường hợp lồng ruột biến chứng nặng đầu tiên tại Bệnh viện Đa khoa Tâm Anh TP HCM. Sau khi được cấp cứu khẩn cấp, bác sĩ đã áp dụng phương pháp bơm hơi để tháo lồng ruột cho bé, và sau hai ngày điều trị, bé đã hồi phục và được xuất viện.",
     "link": "https://vnexpress.net/be-trai-bi-bien-chung-long-ruot-4859550.html",
@@ -1724,33 +1782,6 @@
     ]
   },
   {
-    "title": "Đường huyết mạch phía đông TP HCM 15 năm chưa mở rộng xong",
-    "content": "Dự án mở rộng xa lộ Hà Nội tại TP HCM kéo dài 15 năm vẫn chưa hoàn thành do vướng mặt bằng. Dự án này có chiều dài 15,7 km và được khởi công từ năm 2010 với kinh phí hơn 4.900 tỷ đồng. Mặc dù đã đạt hơn 91% tiến độ, phần mở rộng đến nút giao Tân Vạn vẫn đang tắc nghẽn do chưa giải phóng mặt bằng cho khoảng 30 hộ dân tại khu vực này. Việc chậm trễ trong dự án đã tạo ra tình trạng ùn tắc giao thông nghiêm trọng tại khu vực cửa ngõ phía Đông thành phố.",
-    "link": "https://vnexpress.net/duong-huyet-mach-phia-dong-tp-hcm-15-nam-chua-mo-rong-xong-4859341.html",
-    "cat": "thoi-su",
-    "positivity": 3,
-    "importance": 8,
-    "question": "Tại sao dự án mở rộng xa lộ Hà Nội tại TP HCM chưa hoàn thành?",
-    "answers": [
-      {
-        "text": "Vướng mặt bằng chưa giải phóng xong.",
-        "correct": true
-      },
-      {
-        "text": "Thiếu kinh phí đầu tư.",
-        "correct": false
-      },
-      {
-        "text": "Công ty thi công không đủ năng lực.",
-        "correct": false
-      },
-      {
-        "text": "Thời tiết không thuận lợi.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Nguyên nhân nhiều tiếng nổ vang trời Hà Nội lúc rạng sáng",
     "content": "Vào rạng sáng ngày 11-3, nhiều người dân ở Hà Nội nghe thấy tiếng nổ lớn do một bãi phế liệu gần đại lộ Thăng Long bốc cháy. Hỏa hoạn này gây ra cột khói đen cao hàng chục mét và tiếng nổ từ các bình áp lực trong bãi phế liệu. Cảnh sát phòng cháy chữa cháy đã được điều động đến hiện trường để xử lý vụ việc, và may mắn không có thương vong nào xảy ra.",
     "link": "https://tuoitre.vn/nguyen-nhan-nhieu-tieng-no-vang-troi-ha-noi-luc-rang-sang-20250311063142163.htm",
@@ -2041,6 +2072,33 @@
     ]
   },
   {
+    "title": "Cách phân biệt giữa 'va chạm giao thông' và 'tai nạn giao thông'",
+    "content": "Bài viết phân tích sự khác biệt giữa 'va chạm giao thông' và 'tai nạn giao thông' dựa trên mức độ gây thiệt hại về người và tài sản. Va chạm giao thông được định nghĩa là những sự cố có thiệt hại dưới mức quy định của tai nạn giao thông, như gây thương tích cho một người với tỷ lệ thương tật dưới 11% hoặc thiệt hại tài sản dưới 10 triệu đồng. Ngược lại, tai nạn giao thông có mức độ thiệt hại nghiêm trọng hơn, dẫn đến việc xử lý pháp lý khác nhau, trong đó tai nạn có thể bị truy cứu trách nhiệm hình sự.",
+    "link": "https://vnexpress.net/cach-phan-biet-giua-va-cham-giao-thong-va-tai-nan-giao-thong-4859145.html",
+    "cat": "phap-luat",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Va chạm giao thông khác tai nạn giao thông như thế nào?",
+    "answers": [
+      {
+        "text": "Va chạm giao thông có thiệt hại nhẹ hơn tai nạn giao thông.",
+        "correct": true
+      },
+      {
+        "text": "Va chạm giao thông luôn gây thiệt hại nặng nề.",
+        "correct": false
+      },
+      {
+        "text": "Tai nạn giao thông xảy ra chỉ với một xe.",
+        "correct": false
+      },
+      {
+        "text": "Va chạm giao thông không bao giờ bị phạt.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Bác sĩ vẽ bản đồ tim cứu sản phụ thoát cửa tử",
     "content": "Một sản phụ 36 tuổi đã thoát khỏi nguy cơ tử vong trong ca mổ sinh nhờ vào sự can thiệp kịp thời của bác sĩ. Trong quá trình mang thai, chị gặp phải tình trạng nhịp tim nhanh lên đến 190 lần/phút và không đáp ứng với thuốc điều trị. Các bác sĩ đã sử dụng kỹ thuật lập bản đồ tim 3D để xác định nguyên nhân và thực hiện đốt điện giúp nhịp tim trở lại bình thường, đảm bảo sự an toàn cho cả mẹ và bé.",
     "link": "https://vnexpress.net/bac-si-ve-ban-do-tim-cuu-san-phu-thoat-cua-tu-4858948.html",
@@ -2067,33 +2125,6 @@
       },
       {
         "text": "Không thực hiện mổ mà chỉ theo dõi tình trạng",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Cách phân biệt giữa 'va chạm giao thông' và 'tai nạn giao thông'",
-    "content": "Bài viết phân tích sự khác biệt giữa 'va chạm giao thông' và 'tai nạn giao thông' dựa trên mức độ gây thiệt hại về người và tài sản. Va chạm giao thông được định nghĩa là những sự cố có thiệt hại dưới mức quy định của tai nạn giao thông, như gây thương tích cho một người với tỷ lệ thương tật dưới 11% hoặc thiệt hại tài sản dưới 10 triệu đồng. Ngược lại, tai nạn giao thông có mức độ thiệt hại nghiêm trọng hơn, dẫn đến việc xử lý pháp lý khác nhau, trong đó tai nạn có thể bị truy cứu trách nhiệm hình sự.",
-    "link": "https://vnexpress.net/cach-phan-biet-giua-va-cham-giao-thong-va-tai-nan-giao-thong-4859145.html",
-    "cat": "phap-luat",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Va chạm giao thông khác tai nạn giao thông như thế nào?",
-    "answers": [
-      {
-        "text": "Va chạm giao thông có thiệt hại nhẹ hơn tai nạn giao thông.",
-        "correct": true
-      },
-      {
-        "text": "Va chạm giao thông luôn gây thiệt hại nặng nề.",
-        "correct": false
-      },
-      {
-        "text": "Tai nạn giao thông xảy ra chỉ với một xe.",
-        "correct": false
-      },
-      {
-        "text": "Va chạm giao thông không bao giờ bị phạt.",
         "correct": false
       }
     ]
@@ -4653,37 +4684,6 @@
       },
       {
         "text": "Chỉ muốn nghỉ ngơi",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Xếp hạng tỉnh thành: 28 địa phương có quy mô GRDP tương đương nơi giàu nhất nước",
-    "content": "Bài viết phân tích xếp hạng quy mô GRDP của các tỉnh thành tại Việt Nam, cho thấy 28 địa phương có GRDP thấp hơn 100.000 tỉ đồng, trong khi có 8 tỉnh thành phố đạt trên 300.000 tỉ đồng. TP.HCM và Hà Nội đứng đầu với GRDP lần lượt là 1,78 triệu tỉ đồng và 1,43 triệu tỉ đồng. Sự chênh lệch về quy mô kinh tế giữa các tỉnh thành cho thấy rõ ràng, với một số địa phương có GRDP rất thấp, chỉ đạt dưới 50.000 tỉ đồng.",
-    "link": "https://tuoitre.vn/xep-hang-tinh-thanh-28-dia-phuong-co-quy-mo-grdp-tuong-duong-noi-giau-nhat-nuoc-2025031012000292.htm",
-    "cat": "kinh-doanh",
-    "positivity": 6,
-    "importance": 7,
-    "question": "Có bao nhiêu địa phương có quy mô GRDP dưới 100.000 tỉ đồng?",
-    "answers": [
-      {
-        "text": "28",
-        "correct": true
-      },
-      {
-        "text": "10",
-        "correct": false
-      },
-      {
-        "text": "15",
-        "correct": false
-      },
-      {
-        "text": "20",
-        "correct": false
-      },
-      {
-        "text": "5",
         "correct": false
       }
     ]
